2010-01-20  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=33930
        Crash in JSDOMWindowBase::crossDomainAccessErrorMessage when accessing a detached sandboxed frame

        * http/tests/security/detached-sandboxed-frame-access-expected.txt: Added.
        * http/tests/security/detached-sandboxed-frame-access.html: Added.

2010-01-20  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Re-skip svg/custom/use-instanceRoot-event-bubbling.xhtml on Gtk bot, still fails. Though the other platforms are fixed.
        Reopened bug 33835.

        * platform/gtk/Skipped:

2010-01-20  Eric Seidel  <eric@webkit.org>

        Reviewed by Maciej Stachowiak.

        REGRESSION(r53514?): fast/canvas/webgl/texImage2DImageDataTest.html fails on Leopard Release Bot
        https://bugs.webkit.org/show_bug.cgi?id=33893

        * platform/mac-leopard/Skipped: Skip the test for now.

2010-01-20  Nikolas Zimmermann  <nzimmermann@rim.com>

        Rubber-stamped by Eric Seidel.

        Add Leopard specific pixel test results where needed, most just show marginal 1px diffs, or even invisible changes,
        only the filter test changed, but it visually looks the same - must be a Cg difference to the Snow Leopard baseline.
        Now the pixel tests pass again with --tolerance 0 on my Leopard machine.

        * platform/mac-leopard/svg/W3C-SVG-1.1/pservers-grad-17-b-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/pservers-grad-17-b-expected.png:
        * platform/mac-leopard/svg/css/circle-in-mask-with-shadow-expected.checksum: Added.
        * platform/mac-leopard/svg/css/circle-in-mask-with-shadow-expected.png: Added.
        * platform/mac-leopard/svg/css/composite-shadow-example-expected.checksum:
        * platform/mac-leopard/svg/css/composite-shadow-example-expected.png:
        * platform/mac-leopard/svg/css/composite-shadow-with-opacity-expected.checksum: Added.