@@ -1,0 +1,1 @@
+This test checks to make sure that calling pushState() from within a popstate event handler doesn't ASSERT or crash.
