@@ -1,0 +1,23 @@
+<script>
+
+if (window.layoutTestController) {
+  layoutTestController.clearBackForwardList();
+  layoutTestController.dumpAsText();
+  layoutTestController.waitUntilDone();
+}
+
+onpopstate = function() {
+    history.pushState(null, null);
+    if (window.layoutTestController)
+        layoutTestController.notifyDone();
+}
+
+onload = function() {
+    history.pushState(null, null);
+    history.back();
+}
+
+</script>
+<body>
+This test checks to make sure that calling pushState() from within a popstate event handler doesn't ASSERT or crash.
+</body>
